<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tabs.TabFragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".1"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/debut"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".08"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/c"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".08"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/mini"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".26"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/equipe_1"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".26"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/equipe_2"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".08"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/r_1"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".08"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/r_x"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".08"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:text="@string/r_2"
            android:textColor="@color/colorBetTitle"
            android:textSize="15dp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFragment1"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"/>

</LinearLayout>
