<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tabs.TabFragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".1"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/debut"
            android:textSize="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".07"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/c"
            android:textSize="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".07"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/mini"
            android:textSize="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".28"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/equipe_1"
            android:textSize="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".28"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/equipe_2"
            android:textSize="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".11"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/moins"
            android:textSize="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".11"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textview_border"
            android:textColor="@color/colorBetTitle"
            android:gravity="center"
            android:text="@string/plus"
            android:textSize="12dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvFragment5"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_above="@+id/adView"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

    </RelativeLayout>

</LinearLayout>
